--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,4 @@ spring.datasource.password=
 spring.datasource.username=root
 spring.datasource.url=jdbc:mysql://localhost:3306/sms?Timezone=UTC
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
