--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,8 @@ spring.datasource.username=root
 spring.datasource.url=jdbc:mysql://localhost:3306/sms?Timezone=UTC
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.file-size-threshold=1KB
+spring.servlet.multipart.max-file-size=2MB
+spring.servlet.multipart.max-request-size=200MB
